--- a/css/inpage2.css
+++ b/css/inpage2.css
@@ -18,7 +18,7 @@
   background-size: cover; }
 #desktop .join .slogan {
   margin-bottom: -20px; }
-#desktop .join .col-6 {
+#desktop .join .pic {
   position: relative;
   z-index: 1; }
 #desktop .join .join-cta {
